--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     ]
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.2.0",
+    "@stripe/react-stripe-js": "1.1.2",
+    "@stripe/stripe-js": "1.11.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -28,12 +31,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@auth0/auth0-react": "^1.2.0",
+    "axios": "^0.21.1",
+    "netlify": "6.0.12",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.2",
+    "stripe": "8.130.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
